2008-12-03   D. V. Wiebe <getdata@ketiltrout.net>  svn:258
	* src/open.c (_GD_ParseDirective): Handle bzip and gzip ENCODING directives.

	* src/encoding.c: Fix bzip2 non-module framework.

	* src/ascii.c (_GD_AsciiRead): Don't throw an error on EOF.

	* src/ascii.c (_GD_AsciiTemp) src/raw.c (_GD_RawTemp): Don't overwrite the
	main file.

	* src/bzip.c (_GD_Bzip2Seek _GD_Bzip2Read): Intelligently handle EOF.

	* src/move.c (_GD_MogrifyData): Handle new_filebase internally.  Don't check
	the input encoding before determining it.  Always use temp files, even when
	changing encodings.  Error handling fixes.

	* test/move_data_enc_ar.c test/gzip_move_from.c test/move_data_enc_ra.c
	test/move_data_foffs.c test/move_data_endian.c test/bzip_move_from.c
	test/move_data_nop.c: Added.

2008-12-03   D. V. Wiebe <getdata@ketiltrout.net>  svn:254
	* src/move.c (dirfile_move): Don't bother checking whether the encoding is
	understood if we're not moving the data.  Also, update the fragment index
	for the field and mark both the old and new fragments as dirty.

	* test/move.c test/move_protect.c test/move_index.c: Added.

2008-12-01   D. V. Wiebe <getdata@ketiltrout.net>  svn:253
	* src/ascii.c src/bzip.c src/encoding.c src/gzip.c src/raw.c: Initialise
	filename in the library directly instead of passing that off on the encoding
	framework.

	* man/dirfile_move.3: Added.

	* src/getdata.h.in: Add GD_IGNORE_REFS.
	* src/include.c (dirfile_include): Handle both explicit and implicit
	reference field declarations, along with GD_IGNORE_REFS.
	* test/include_ignore.c test/include_ref.c test/include_auto.c: Added.
	* man/dirfile_include.3: Update.

	* test/global_ref_empty.c test/global_ref_set.c test/global_ref.c: Added.
	* man/dirfile_reference.3: Added.

	* add.c (_GD_Add): Don't modify the dirfile until we're sure to succeed.

	* src/add.c (_GD_Add) src/entry.c (_GD_GetScalar) src/legacy.c
	(_GD_GetDirfile GetFormat) src/open.c (_GD_ParseFieldSpec) src/globals.c