@@ -256,20 +256,20 @@ __THROW __gd_nonnull ((1,2,3));
 extern int dirfile_add_string(DIRFILE* D, const char* field_code,
     const char* value, int fragment_index) __THROW __gd_nonnull((1,2,3));
 
-extern int dirfile_change_bit(DIRFILE* D, const char* field_code,
+extern int dirfile_alter_bit(DIRFILE* D, const char* field_code,
     const char* in_field, int bitnum, int numbits) __THROW __gd_nonnull((1,2));
 
-extern int dirfile_change_const(DIRFILE* D, const char* field_code,
+extern int dirfile_alter_const(DIRFILE* D, const char* field_code,
     gd_type_t const_type) __THROW __gd_nonnull((1,2));
 
-extern int dirfile_change_lincom(DIRFILE* D, const char* field_code,
+extern int dirfile_alter_lincom(DIRFILE* D, const char* field_code,
     int n_fields, const char** in_fields, const double* m, const double* b)
 __THROW __gd_nonnull((1,2));
 
-extern int dirfile_change_multiply(DIRFILE* D, const char* field_code,
+extern int dirfile_alter_multiply(DIRFILE* D, const char* field_code,
     const char* in_field1, const char* in_field2) __THROW __gd_nonnull((1,2));
 
-extern int dirfile_change_phase(DIRFILE* D, const char* field_code,
+extern int dirfile_alter_phase(DIRFILE* D, const char* field_code,
     const char* in_field, int shift) __THROW __gd_nonnull((1,2));
 
 extern int get_constant(DIRFILE* D, const char *field_code,
@@ -401,20 +401,26 @@ __gd_nonnull((1,2));
 extern int dirfile_add_spec(DIRFILE* D, const char* line,
     int fragment_index) __gd_nonnull ((1,2));
 
-extern DIRFILE* dirfile_cbopen(const char* dirfilename, unsigned long flags,
-    int (*sehandler)(const DIRFILE*, int, char*)) __gd_nonnull ((1));
+extern int dirifle_alter_encoding(DIRFILE* D, unsigned int encoding,
+    int fragment, int move) __gd_nonnull ((1));
 
-extern int dirfile_change(DIRFILE* D, const char* field_code,
+extern int dirfile_alter_endianness(DIRFILE* D, unsigned int byte_sex,
+    int fragment, int move) __gd_nonnull ((1));
+
+extern int dirfile_alter_entry(DIRFILE* D, const char* field_code,
     const gd_entry_t *entry, int move) __gd_nonnull ((1,2));
 
-extern int dirfile_change_linterp(DIRFILE* D, const char* field_code,
+extern int dirfile_alter_linterp(DIRFILE* D, const char* field_code,
     const char* in_field, const char* table, int move) __gd_nonnull ((1,2));
 
-extern int dirfile_change_raw(DIRFILE *D, const char *field_code,
+extern int dirfile_alter_raw(DIRFILE *D, const char *field_code,
     unsigned int spf, gd_type_t data_type, int move) __gd_nonnull ((1,2));
 
-extern int dirfile_change_spec(DIRFILE* D, const char* line,
+extern int dirfile_alter_spec(DIRFILE* D, const char* line,
     int move) __gd_nonnull ((1,2));
+
+extern DIRFILE* dirfile_cbopen(const char* dirfilename, unsigned long flags,
+    int (*sehandler)(const DIRFILE*, int, char*)) __gd_nonnull ((1));
 
 extern int dirfile_close(DIRFILE* dirfile);
 
@@ -423,8 +429,9 @@ extern int dirfile_delete(DIRFILE* D, const char* field_code,
 
 extern int dirfile_discard(DIRFILE* dirfile);
 
-extern int put_encoding(DIRFILE* D, unsigned int encoding, int fragment,
-    int move) __gd_nonnull ((1));
+extern unsigned int get_encoding(DIRFILE* D, int fragment) __gd_nonnull ((1));
+
+extern int get_endianness(DIRFILE* D, int fragment) __gd_nonnull ((1));
 
 extern int dirfile_flush(DIRFILE* dirfile,
     const char* field_code) __gd_nonnull ((1));
@@ -432,8 +439,8 @@ extern int dirfile_flush(DIRFILE* dirfile,
 extern int dirfile_include(DIRFILE* D, const char* file, int fragment_index,
     unsigned long flags) __gd_nonnull ((1,2));
 
-extern int dirfile_mchange_spec(DIRFILE* D, const char* parent,
-    const char* line, int move) __gd_nonnull ((1,2,3));
+extern int dirfile_malter_spec(DIRFILE* D, const char* parent, const char* line,
+    int move) __gd_nonnull ((1,2,3));
 
 extern int dirfile_metaflush(DIRFILE* dirfile) __gd_nonnull ((1));
 
@@ -445,6 +452,9 @@ extern DIRFILE* dirfile_open(const char* dirfilename,
 
 /* the following functions are _FILE_OFFSET_BITS sensitive */
 #ifndef __USE_FILE_OFFSET64
+extern int dirfile_alter_frameoffset(DIRFILE* D, off_t field_code, int fragment,
+    int move) __gd_nonnull ((1));
+
 extern size_t getdata(DIRFILE* dirfile, const char *field_code,
     off_t first_frame, off_t first_sample, size_t num_frames,
     size_t num_samples, gd_type_t return_type,
@@ -458,9 +468,6 @@ extern size_t putdata(DIRFILE* dirfile, const char *field_code,
 extern off_t get_frameoffset(DIRFILE* dirfile, int fragment)
   __THROW __gd_nonnull ((1));
 
-extern int put_frameoffset(DIRFILE* D, off_t field_code, int fragment,
-    int move) __gd_nonnull ((1));
-
 extern off_t get_nframes(DIRFILE* dirfile) __gd_nonnull ((1));
 #else
 # ifdef __REDIRECT_NTH
@@ -471,6 +478,9 @@ extern off_t __REDIRECT_NTH (get_frameoffset, (DIRFILE* dirfile, int fragment),
 # endif
 
 # ifdef __REDIRECT
+extern int __REDIRECT (dirfile_alter_frameoffset, (DIRFILE* D, __off64_t offset,
+      int fragment, int move), dirfile_alter_frameoffset64) __gd_nonnull ((1));
+
 extern size_t __REDIRECT (getdata, (DIRFILE* dirfile, const char *field_code,
       __off64_t first_frame, __off64_t first_samp, size_t num_frames,
       size_t num_samp, gd_type_t return_type, void *data_out),
@@ -481,21 +491,21 @@ extern size_t __REDIRECT (putdata, (DIRFILE* dirfile, const char *field_code,
       size_t num_samples, gd_type_t data_type, const void *data_in),
     putdata64) __gd_nonnull ((1, 2));
 
-extern int __REDIRECT (put_frameoffset, (DIRFILE* D, __off64_t offset,
-      int fragment, int move), put_frameoffset64) __gd_nonnull ((1));
-
 extern off_t __REDIRECT (get_nframes, (DIRFILE* dirfile),
     get_nframes64) __gd_nonnull ((1));
 # else
+#  define dirfile_alter_frameoffset dirfile_alter_frameoffset64
 #  define getdata getdata64
 #  define putdata putdata64
-#  define put_frameoffset put_frameoffset64
 #  define get_nframes get_nframes64
 # endif
 #endif
 
 /* if requested, declare the LFS transitional extension */
 #ifdef __USE_LARGEFILE64
+extern int dirfile_alter_frameoffset64(DIRFILE* D, __off64_t field_code,
+    int fragment, int move) __gd_nonnull ((1));
+
 extern size_t getdata64(DIRFILE* dirfile, const char *field_code,
     __off64_t first_frame, __off64_t first_samp, size_t num_frames,
     size_t num_samp, gd_type_t return_type, void *data_out)
@@ -508,9 +518,6 @@ extern size_t putdata64(DIRFILE* dirfile, const char *field_code,
 
 extern __off64_t get_frameoffset64(DIRFILE* dirfile,
     int fragment) __gd_nonnull ((1));
-
-extern int put_frameoffset64(DIRFILE* D, __off64_t field_code, int fragment,
-    int move) __gd_nonnull ((1));
 
 extern __off64_t get_nframes64(DIRFILE* dirfile) __gd_nonnull ((1));
 #endif
